--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 #estrategia de generacion de base de datos
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost/bdmascotas
+spring.datasource.url=jdbc:postgresql://localhost/bd_mascotas
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
